Fixed Issue and added New Unit for Unit Metric Change
Fixed distance issue and added a new unit for the distance unit metric change in the data and predictions page.

--- a/src/components/UnitSettingsPanel/UnitSettingsPanel.css
+++ b/src/components/UnitSettingsPanel/UnitSettingsPanel.css
@@ -35,3 +35,9 @@
     border: 1px solid #aaa;
     background-color: #fff;
   }  
+
+  .unit-panel-wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
