--- a/src/routes/Dashboard/Dashboard.module.css
+++ b/src/routes/Dashboard/Dashboard.module.css
@@ -580,11 +580,11 @@ body {
 /* Bottom Section for Drag and Drop CSV Files */
 .bottomSection {
   padding: 20px;
-  width: 50%;
+  width: 100%;
   background-color: white;
   border-radius: 8px;
-  margin: auto;
-  margin-top: 50px;
+  margin: 50px auto 0 auto;
+  overflow-x: auto;
 
 }
 
@@ -611,30 +611,36 @@ body {
 }
 
 .filePreview {
-  margin-top: 20px;
+  margin-top: 1.5rem;
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 1rem;
   background-color: #f9f9f9;
   color: #000;
-  overflow: auto;
+  overflow-x: auto;
   height: 250px;
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .filePreview table {
-  width: 100%;
+  width: 95%;
   border-collapse: collapse;
+  font-size: 0.95rem;
 }
 
 .filePreview th, .filePreview td {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 0.75rem 1rem;
   text-align: left;
+  font-size: 0.95rem;
 }
 
 .filePreview th {
-  background-color: #4a90e2;
+  background-color: #e97462;
   color: white;
+  white-space: nowrap;
+  font-weight: bold;
 }
 
 .resetButton {
