--- a/src/routes/Dashboard/Dashboard.module.css
+++ b/src/routes/Dashboard/Dashboard.module.css
@@ -590,12 +590,14 @@ body {
 
 .dragDropArea {
   height: 200px;
+  width: 50%;
   border: 2px dashed #e97462;
   color: #e97462;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
@@ -612,7 +614,7 @@ body {
 
 .filePreview {
   margin-top: 1.5rem;
-  margin-left: 240px;
+  margin-left: 230px;
   border: 1px solid #ccc;
   padding: 1rem;
   background-color: #f9f9f9;
