--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -1,23 +1,21 @@
 .settings-container {
   max-width: 60%;
-  margin: 0 auto;
+  margin: 3% auto;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease, color 0.3s ease;
-  margin-top: 3%;
-  margin-bottom: 3%;
 }
 
-/* Light theme */
-.settings-container.light {
+/* Light Theme */
+html.light .settings-container {
   background-color: #f9f9f9;
   color: #333;
 }
 
-/* Dark theme */
-.settings-container.dark {
+/* Dark Theme */
+html.dark .settings-container {
   background-color: #1e1e1e;
   color: #ddd;
 }
@@ -37,13 +35,13 @@
 .settings-section {
   padding: 15px;
   border-radius: 8px;
-  background-color: inherit; /* Adapt to the theme */
+  background-color: inherit;
   border: 1px solid;
-  border-color: rgba(0, 0, 0, 0.1); /* Light theme default */
+  border-color: rgba(0, 0, 0, 0.1);
 }
 
-.settings-container.dark .settings-section {
-  border-color: rgba(255, 255, 255, 0.2); /* Dark theme border */
+html.dark .settings-container .settings-section {
+  border-color: rgba(255, 255, 255, 0.2);
 }
 
 .settings-section h2 {
@@ -67,13 +65,14 @@
   margin-top: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  background-color: inherit; /* Adapt to the theme */
-  color: inherit; /* Adapt text color */
+  background-color: inherit;
+  color: inherit;
+  transition: border-color 0.3s ease;
 }
 
-.settings-container.dark .form-group input[type="password"],
-.settings-container.dark .form-group select {
-  border-color: rgba(255, 255, 255, 0.2); /* Adjust for dark theme */
+html.dark .settings-container .form-group input[type="password"],
+html.dark .settings-container .form-group select {
+  border-color: rgba(255, 255, 255, 0.2);
 }
 
 .toggle-group {
@@ -111,12 +110,10 @@
   background-color: #b3a7b7;
 }
 
-.settings-container.dark .save-button {
+html.dark .settings-container .save-button {
   background-color: #555;
 }
 
-.settings-container.dark .save-button:hover {
+html.dark .settings-container .save-button:hover {
   background-color: #888;
 }
-
-  
